--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="movieTitleBGColor">#1aa1fb</color>
+    <color name="movieTitleFGColor">#ffffff</color>
+    <color name="movieRateBGColor">#34d1dc</color>
 </resources>
