--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="movie_title_margin">30dp</dimen>
+    <dimen name="poster_margin">8dp</dimen>
+    <dimen name="date_margin">20dp</dimen>
 </resources>
