--- a/app/src/main/res/xml/pref_order.xml
+++ b/app/src/main/res/xml/pref_order.xml
@@ -3,9 +3,11 @@
 
 <PreferenceCategory android:title="Movies Sort Order">
     <ListPreference
-        android:key="sort_order"
-        android:title="Movies Order"
-        android:entries="@array/movies_order_by"
-        android:entryValues="@array/movies_order_alias"/>
+        android:key="@string/pref_sort_key"
+        android:title="@string/title_movie_sort_order"
+        android:entries="@array/pref_sort_options"
+        android:summary="@string/pref_sort_label_popular"
+        android:entryValues="@array/pref_sort_values"
+        android:defaultValue="@string/pref_sort_top_rated"/>
 </PreferenceCategory>
 </PreferenceScreen>
